2015-10-10  Dirk Eddelbuettel  <edd@debian.org>

	* src/lda_core.cc: Do not use #warning as it is gcc specific

2015-10-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Updates to DESCRIPTION (per R CMD check)
	* NAMESPACE: Ditto

2014-01-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.0.6

	* configure.in: Update autoconf macros ax_boost_base and
	ax_boost_program_options to current versions in order to also find
	Boost libraries in /usr/lib/${ARCH}/ under current Debian / Ubuntu

	* config.guess: Added to keep configure happy
	* config.sub: Idem
	* install-sh: Idem

	* src/bfgs.cc: Switch from isnan() to ISNAN() (defined by R) to
	permit compilation under `-std=c++11` where isnan() is also defined.
	* src/gd.cc: Idem
	* src/parse_example.cc: Idem

2012-05-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.0.5

	* src/*: Massively invasive changes to get rid of stdout, stderr,
	std::cout, std::cerr and exit() as now required by CRAN

	* configure.in: Changed per CRAN request ever where this conflicts
	with preferences by upstream: no more -ffast-math and -march=native

	* cleanup: Also remove src/symbols.rds

2012-05-13  Dirk Eddelbuettel  <edd@debian.org>

	* src/*: Added 'unistd.h' and 'cstring' includes to a number of files
	to permit compilation under g++-4.7

2011-09-27  Dirk Eddelbuettel  <edd@debian.org>

	* configure.in: Do not set 'march=nocona' on g++ 4.2 as it upsets the
	ppc architecture builds on OS X

	* cleanup: Also remove autom4te.cache

2011-09-25  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Set Version: to 0.0.4

	* src/*: Updated to current version of vowpal's git repo

2011-09-23  Dirk Eddelbuettel  <edd@debian.org>

	* src/*: Updated to current version of vowpal's git repo
	which includes fixes for isnan not compiling on OS X

2011-09-22  Dirk Eddelbuettel  <edd@debian.org>

	* src/R_vw.cpp: Cast total_features to double

	* configure.in: More cleanup / reindentation
